<resources>
    <string name="app_name">AutoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="hint_password">Enter Password</string>
    <string name="question">You are not a member?</string>
    <string name="register">Register</string>
    <string name="email"><font size="12">Enter Email Address</font></string>
    <string name="login">Login</string>
    <string name="greeting">VZDM App</string>
    <string name="signup">Signup here!</string>
    <string name="terms">Terms &amp; Conditions</string>

    <string name="home_second">Home Second</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_filter">Setting</string>
    <string name="profileimage">profileImage</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
